--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@frctl/mandelbrot": "^1.0.0",
     "lodash": "^4.17.21"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "browserslist": [
     "last 2 versions",
     "> 2%",
